--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">Eu sou Professor Luiz Otávio_</p>
-        <h1>Eu ensino Programação na escola Pécio em Fórida Paulista</h1>
+        <p class="lead">Eu sou Professor Luiz Otávio</p>
+        <h1>Eu ensino programação na Escola Pércio em Flórida Paulista</h1>
         <p>Sou Engenheira de Controle e Automação, Professor de Matemática e Engenheiro Civil. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript.</p>
         <p>Minhas habilidades</p>
         <div>
